objects/Lead_Dealer_Acknowledgement_ADF__e.object
<CustomObject>
    <fields>
        <fullName>CRM_Payload__c</fullName>
        <label>CRM Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_XML_Response__c</fullName>
        <description>Store the entire XML Response from CRM</description>
        <label>CRM XML Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSP_Payload__c</fullName>
        <label>DSP_Payload</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Details_Urban_Science__c</fullName>
        <label>Error Details Urban Science</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Walkin_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Walkin Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oppotunity_SF_ID__c</fullName>
        <label>Oppotunity SF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_DSP__c</fullName>
        <label>Response_DSP</label>
        <length>50768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Urban_Science__c</fullName>
        <label>Response Urban Science</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Error__c</fullName>
        <label>Routing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_DSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to DSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_DSP_Status__c</fullName>
        <label>Sent to DSP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Urban_Science_Status__c</fullName>
        <label>Sent to Urban Science Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrbanScience_Payload__c</fullName>
        <description>Used to store the requested ADF sent to Urban Science</description>
        <label>Urban Science Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lead Dealer Acknowledgement ADF</label>
    <pluralLabel>Lead Dealer Acknowledgement ADF</pluralLabel>
</CustomObject>